--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #002884;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,36 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.links * {
+  text-decoration: none;
+}
+
+.links *:visited {
+  color: #002884;
+}
+
+.tripName {
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.tripName-list-item {
+  display: flex;
+  gap: 1vh;
+  border-radius: 1vh;
+}
+
+.tripName-list-item:hover {
+  background-color: #757de87f;
+}
+
+#outlined-basic {
+  width: 40vw;
+  padding: 2vh;
+}
+
+.button-submit {
+  background-color: #002884 !important;
 }
